Minor update to force the <body> to be a minimum of 960px. Keeps backgrounds from being clipped for block-level wrapping elements with width:auto or width:100%. This can happen in non-IE browsers when there is horizontal scrolling. This is caused when browser constrained smaller than 960px. Anyway, the fix was simple. Takes more effort to explain it than to fix it. I used to just put this min-width rule in my own site's stylesheet, but I've had several people tell me they thought it'd be good in the 960 CSS itself.

--- a/code/css/uncompressed/960.css
+++ b/code/css/uncompressed/960.css
@@ -5,6 +5,18 @@
 	Licensed under GPL and MIT.
 */
 
+/*
+	Forces backgrounds to span full width,
+	even if there is horizontal scrolling.
+	Increase this if your layout is wider.
+
+	Note: IE6 works fine without this fix.
+*/
+
+body {
+	min-width: 960px;
+}
+
 /* `Containers
 ----------------------------------------------------------------------------------------------------*/
 
@@ -622,6 +634,7 @@
 	The following zoom:1 rule is specifically for IE6 + IE7.
 	Move to separate stylesheet if invalid CSS is a problem.
 */
+
 * html .clearfix,
 *:first-child+html .clearfix {
 	zoom: 1;
